<resources>
    <string name="Apply">apply</string>
    <string name="CODE_PUSH_APK_BUILD_TIME">1675438734821</string>
    <string name="_50_off_free_delivery">50% off &amp; Free Delivery</string>
    <string name="_91">+91</string>
    <string name="a_new_swiggy_awaits">A new Swiggy Awaits!</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abort_transaction_confirmation">Do you really wish to abort this transaction?</string>
    <string name="accessibility_for">For</string>
    <string name="accessibility_from">From</string>
    <string name="accessibility_go_to_app_update_page">Go to app update page</string>
    <string name="accessibility_go_to_cart">Go to cart</string>
    <string name="accessibility_go_to_cart_page">Go to cart page</string>
    <string name="accessibility_go_to_order_rating_page">Go to order rating page</string>
    <string name="accessibility_go_to_order_refund__tracking_page">Go to order refund tracking page</string>
    <string name="accessibility_go_to_payment_options_page">Go to payment options page</string>
    <string name="accessibility_go_to_track_page">Go to track page</string>
    <string name="accessibility_in_cart">In Cart</string>
    <string name="accessibility_role_button">button</string>
    <string name="accessibility_role_link">link</string>
    <string name="accessibility_role_tab">tab</string>
    <string name="accessibility_total_amount_is">Total amount is</string>
    <string name="account_controller__active_order_plural">Active Orders</string>
    <string name="account_controller__active_order_singular">Active Order</string>
    <string name="account_controller__favorites_lable">Favourites</string>
    <string name="account_controller__hidden_lable">Hidden Restaurants</string>
    <string name="account_controller__manage_address_lable">Manage Address</string>
    <string name="account_controller__my_account_lable">My Account</string>
    <string name="account_controller__offer_lable">Offers</string>
    <string name="account_controller__offers_lable">Offers</string>
    <string name="account_controller__past_order_plural">Past Orders</string>
    <string name="account_controller__past_order_singular">Past Order</string>
    <string name="account_controller__payment_lable">Payment Modes</string>
    <string name="account_controller__referral_lable">Referrals</string>
    <string name="account_controller__refund_lable">Refund Status</string>
    <string name="account_controller_account_lable">Account</string>
    <string name="account_controller_login_lable">Login</string>
    <string name="account_controller_payment_modes">Payment Modes</string>
    <string name="account_controller_payments">Payments</string>
    <string name="account_controller_send_feedback_lable">Send Feedback</string>
    <string name="account_icon_content_description">Show account</string>
    <string name="account_linked_successfully">Account linked successfully.</string>
    <string name="account_linking_failed">Account linking failed</string>
    <string name="account_logout_options">Logout Options</string>
    <string name="account_my_super_days_left">%s days left</string>
    <string name="account_my_super_title">My SUPER</string>
    <string name="account_swiggy_pay_subtitle">View Account Balance &amp; Transactions History</string>
    <string name="account_swiggy_pay_title">Swiggy Money</string>
    <string name="account_swiggy_super">MY SUPER</string>
    <string name="account_tooltip_button">Got it, Account is here</string>
    <string name="account_tooltip_title_ux3">Now access your orders,\10account details &amp; help here!</string>
    <string name="action_add_fav_content_description">mark as favorite</string>
    <string name="action_button_go_to_home">GO TO HOME</string>
    <string name="action_button_retry">RETRY</string>
    <string name="action_change_content_description">change</string>
    <string name="action_clear_edit_box">clear edit box</string>
    <string name="action_delivery_instructions_close_button">close</string>
    <string name="action_deselect_content_description">deselect</string>
    <string name="action_edit">edit</string>
    <string name="action_get_otp">get OTP</string>
    <string name="action_get_otp_via_sms">get OTP via SMS</string>
    <string name="action_get_otp_via_whatsapp">get OTP via WhatsApp</string>
    <string name="action_go_to_home_content_description">go to home</string>
    <string name="action_go_to_menu_content_description">go to menu</string>
    <string name="action_go_to_menu_page_content_description">go to menu page</string>
    <string name="action_go_to_search_content_description">go to search</string>
    <string name="action_go_to_voice_search_content_description">start voice search</string>
    <string name="action_know_more_content_description">know more</string>
    <string name="action_menu_cart_crouton">view cart and place order</string>
    <string name="action_menu_category_expand_content_description">expand</string>
    <string name="action_menu_category_minimize_content_description">minimize</string>
    <string name="action_open">open</string>
    <string name="action_order_content_description">order</string>
    <string name="action_read_privacy_policy_content_description">Read Privacy Policy</string>
    <string name="action_read_tnc_content_description">Read Terms and Conditions</string>
    <string name="action_remove_fav_content_description">remove as favorite</string>
    <string name="action_search">search</string>
    <string name="action_search_again_content_description">search again</string>
    <string name="action_search_content_description">search</string>
    <string name="action_see_collection_only_content_description">see %s restaurants</string>
    <string name="action_see_order_details">see order details</string>
    <string name="action_select">select</string>
    <string name="action_select_content_description">select</string>
    <string name="action_select_delivery_instructions_switch_button">select</string>
    <string name="action_turn_off_content_description">turn off</string>
    <string name="action_turn_on_content_description">turn on</string>
    <string name="action_unselect_delivery_instructions_switch_button">unselect</string>
    <string name="action_verify_otp">verify OTP</string>
    <string name="action_verify_via_call">verify via Call</string>
    <string name="active_session">An active session already exists. Please call endUserSession before starting a new session</string>
    <string name="active_string">ACTIVE</string>
    <string name="active_title">Active</string>
    <string name="address_inaccuracy_warning_string">We had difficulty finding this address recently.\10Please consider editing or deleting it.</string>
    <string name="and_symbol_between_spaces"> and </string>
    <string name="batching_callout_bullet_1">Orders are grouped only when grouping them together will not result in additional delay</string>
    <string name="batching_callout_bullet_2">Your promised delivery time accounts for grouping of this order with another order</string>
    <string name="batching_callout_bullet_3">Grouped orders allow Swiggy to reduce carbon footprint and contribute to a healthier environment</string>
    <string name="batching_callout_title">Important information about grouped order deliveries</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_delete_text">Delete</string>
    <string name="get_otp_via">Get OTP via:</string>
    <string name="gtm_delete_address">manage-address-delete</string>
    <string name="gtm_edit_address">manage-address-edit</string>
    <string name="gtm_share_address">manage-address-share</string>
    <string name="location_view_all_addresses_content_description">View all addresses to select</string>
    <string name="login_policy_consent_description_text">By clicking, I accept the </string>
    <string name="ok_got_it">OK, GOT IT</string>
    <string name="otp_mode_sms">SMS</string>
    <string name="otp_mode_whatsapp">WhatsApp</string>
    <string name="policy"> policy</string>
    <string name="popup_location_change_desc">You seem to be in a different location from last time. Some items might change in your cart due to this.</string>
    <string name="popup_location_change_left_button">Go Back</string>
    <string name="popup_location_change_right_button">Clear Cart</string>
    <string name="popup_location_change_text">Location Change Detected</string>
    <string name="privacy">privacy</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="select_delivery_address">Select Delivery Address</string>
    <string name="sms_otp">SMS OTP</string>
    <string name="string_delete_confirmation_secondary">You can’t undo this. You can record a \10new one later.</string>
    <string name="string_delete_voice_inteructions_title">Delete voice instructions?</string>
    <string name="terms_and_conditions_text">Terms &amp; Conditions</string>
    <string name="terms_of_service">terms of service</string>
    <string name="tnc_and_privacy_policy_consent_text">By clicking, I accept the Terms and Conditions and Privacy Policy</string>
    <string name="v2_address__delete_address_list_lable">Delete</string>
    <string name="v2_address__edit_address_list_lable">Edit</string>
    <string name="v2_address__share_address_list_lable">Share</string>
    <string name="view_all">view all</string>
    <string name="whatsapp_otp">WhatsApp OTP</string>
</resources>