<?xml version="1.0" encoding="utf-8"?>
<in.swiggy.android.feature.menuv2.view.FlowLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_horizontal" android:orientation="horizontal" android:id="@+id/tv_policy_consent" android:tag="layout/policy_consent_layout_v2_0" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:contentDescription="@string/tnc_and_privacy_policy_consent_text" app:itemSpacing="@dimen/dimen_0dp">
    <in.swiggy.android.dls.textview.DlsTextView android:gravity="start" android:id="@+id/tv_policy_consent_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_policy_consent_description_text" android:importantForAccessibility="no" app:dlsTextColor="7" app:dlsTextStyle="9"/>
    <in.swiggy.android.dls.textview.DlsTextView android:textSize="@dimen/dimen_12dp" android:gravity="start" android:id="@+id/tv_tnc" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_of_service" android:contentDescription="@string/terms_of_service" app:dlsTextColor="7" app:dlsTextStyle="15"/>
    <in.swiggy.android.dls.textview.DlsTextView android:gravity="start" android:id="@+id/tv_and_symbol" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/and_symbol_between_spaces" android:importantForAccessibility="no" app:dlsTextColor="7" app:dlsTextStyle="9"/>
    <in.swiggy.android.dls.textview.DlsTextView android:ellipsize="end" android:gravity="start" android:id="@+id/tv_privacy" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy" android:lines="1" android:contentDescription="@string/privacy_policy" app:dlsTextColor="7" app:dlsTextStyle="15"/>
    <in.swiggy.android.dls.textview.DlsTextView android:ellipsize="end" android:gravity="start" android:id="@+id/tv_policy" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/policy" android:lines="1" android:importantForAccessibility="no" app:dlsTextColor="7" app:dlsTextStyle="15"/>
</in.swiggy.android.feature.menuv2.view.FlowLayout>
