<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/btn_layout_container" android:tag="layout/dual_login_button_layout_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <in.swiggy.android.dls.textview.DlsTextView android:id="@+id/get_otp_title" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/get_otp_via" android:importantForAccessibility="no" android:layout_marginStart="@dimen/dimen_4dp" app:dlsTextColor="8" app:dlsTextStyle="7" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <in.swiggy.android.dls.button.NormalButton android:id="@+id/btn_whatsapp" android:tag="binding_2" android:layout_width="@dimen/dimen_0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_12dp" android:text="@string/otp_mode_whatsapp" android:contentDescription="@string/whatsapp_otp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/btn_sms" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/get_otp_title"/>
    <in.swiggy.android.dls.button.NormalButton android:id="@+id/btn_sms" android:tag="binding_3" android:layout_width="@dimen/dimen_0dp" android:layout_height="wrap_content" android:text="@string/otp_mode_sms" android:contentDescription="@string/sms_otp" android:layout_marginStart="@dimen/dimen_20dp" app:layout_constraintBottom_toBottomOf="@+id/btn_whatsapp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/btn_whatsapp" app:layout_constraintTop_toTopOf="@+id/btn_whatsapp" app:layout_goneMarginStart="@dimen/dimen_0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
