<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_horizontal" android:orientation="horizontal" android:id="@+id/tv_policy_consent" android:tag="layout/policy_consent_layout_0" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:contentDescription="@string/tnc_and_privacy_policy_consent_text">
    <in.swiggy.android.view.SwiggyTextView android:textSize="@dimen/dimen_12dp" android:textColor="@color/blackGrape60" android:gravity="start" android:id="@+id/tv_policy_consent_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_policy_consent_description_text" android:importantForAccessibility="no" android:fontFamily="@font/proxima_nova_regular"/>
    <in.swiggy.android.view.SwiggyTextView android:textSize="@dimen/dimen_12dp" android:textColor="@color/blackGrape100" android:gravity="start" android:id="@+id/tv_tnc" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_and_conditions_text" android:contentDescription="@string/terms_and_conditions_text" android:fontFamily="@font/proxima_nova_bold"/>
    <in.swiggy.android.view.SwiggyTextView android:textSize="@dimen/dimen_12dp" android:textColor="@color/blackGrape60" android:gravity="start" android:id="@+id/tv_and_symbol" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/and_symbol_between_spaces" android:importantForAccessibility="no" android:fontFamily="@font/proxima_nova_regular"/>
    <in.swiggy.android.view.SwiggyTextView android:textSize="@dimen/dimen_12dp" android:textColor="@color/blackGrape100" android:ellipsize="end" android:gravity="start" android:id="@+id/tv_privacy_policy" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_policy_text" android:lines="1" android:contentDescription="@string/privacy_policy_text" android:fontFamily="@font/proxima_nova_bold"/>
</androidx.appcompat.widget.LinearLayoutCompat>
