<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="horizontal" android:tag="layout/item_location_heading_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <in.swiggy.android.view.SwiggyTextView android:gravity="start" android:id="@+id/select_location" android:paddingTop="@dimen/dimen_28dp" android:paddingBottom="@dimen/dimen_22dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_delivery_address" android:importantForAccessibility="no" android:paddingStart="@dimen/dimen_16dp" style="@style/TextExtraBold18spBlackGrape100_90"/>
    <in.swiggy.android.view.SwiggyTextView android:gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/view_all_textview" android:tag="binding_1" android:paddingTop="@dimen/dimen_10dp" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/view_all" android:contentDescription="@string/location_view_all_addresses_content_description" android:paddingEnd="@dimen/dimen_16dp" style="@style/TextBold13spDarkPeach"/>
</LinearLayout>
