<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/address_list_item_0" android:background="@color/white" android:paddingLeft="@dimen/dimen_16dp" android:paddingTop="@dimen/dimen_24dp" android:paddingRight="@dimen/dimen_16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/dimen_20dp" android:paddingEnd="@dimen/dimen_20dp">
    <in.swiggy.android.commonsui.view.IconTextView android:textSize="@dimen/font_size_18sp" android:textColor="@color/blackGrape90" android:gravity="left|center_vertical|center_horizontal|center|start" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginStart="@dimen/dimen_10dp">
        <in.swiggy.android.view.SwiggyTextView android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Home" android:layout_marginStart="@dimen/dimen_6dp" app:minWidthWhenLoading="@dimen/dimen_60dp" app:visibilityWhenLoading="0" style="@style/TextSemiBold15spBlackGrape90"/>
        <in.swiggy.android.view.SwiggyTextView android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_12dp" android:text="No.17, Flat No.103, 1st Main, 3rd Cross, C-19\10No.17, Flat No.103, 1st Main" android:lineSpacingExtra="@dimen/line_spacing_3sp" android:layout_marginStart="@dimen/dimen_6dp" app:lineCountWhenLoading="3" app:minWidthWhenLoading="@dimen/dimen_220dp" app:visibilityWhenLoading="0" style="@style/TextRegular13spBlackGrape70"/>
        <in.swiggy.android.view.SwiggyTextView android:id="@+id/addressContactTv" android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="Contact: 0238459356" android:lineSpacingExtra="@dimen/line_spacing_3sp" android:layout_marginStart="@dimen/dimen_6dp" app:lineCountWhenLoading="3" app:minWidthWhenLoading="@dimen/dimen_220dp" app:visibilityWhenLoading="0" style="@style/TextRegular13spBlackGrape70"/>
        <LinearLayout android:orientation="horizontal" android:tag="binding_5" android:background="@drawable/rounded_background_ffecef_24dp_radius" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_12dp">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_8dp" android:layout_marginTop="@dimen/dimen_6dp" android:src="@drawable/ic_warning"/>
            <in.swiggy.android.view.SwiggyTextView android:textSize="@dimen/dimen_12sp" android:textColor="@color/red_error" android:paddingLeft="@dimen/dimen_4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_4dp" android:layout_marginBottom="@dimen/dimen_4dp" android:text="@string/address_inaccuracy_warning_string" android:lineSpacingExtra="1sp" android:fontFamily="@font/proxima_nova_medium" android:layout_marginEnd="@dimen/dimen_8dp" android:letterSpacing="-0.03"/>
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/dimen_6dp">
            <in.swiggy.android.view.SwiggyTextView android:tag="binding_6" android:paddingTop="@dimen/dimen_12dp" android:paddingBottom="@dimen/dimen_24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/v2_address__edit_address_list_lable" app:minWidthWhenLoading="@dimen/dimen_50dp" app:objectName="@string/gtm_edit_address" app:visibilityWhenLoading="0" style="@style/TextBold14spOrange100Caps"/>
            <in.swiggy.android.view.SwiggyTextView android:tag="binding_7" android:paddingTop="@dimen/dimen_12dp" android:paddingBottom="@dimen/dimen_24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_24dp" android:text="@string/v2_address__delete_address_list_lable" android:layout_marginStart="@dimen/dimen_24dp" app:minWidthWhenLoading="@dimen/dimen_50dp" app:objectName="@string/gtm_delete_address" app:visibilityWhenLoading="0" style="@style/TextBold14spOrange100Caps"/>
            <in.swiggy.android.view.SwiggyTextView android:id="@+id/shareAddressActionTv" android:tag="binding_8" android:paddingTop="@dimen/dimen_12dp" android:paddingBottom="@dimen/dimen_24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_24dp" android:text="@string/v2_address__share_address_list_lable" android:layout_marginStart="@dimen/dimen_24dp" app:minWidthWhenLoading="@dimen/dimen_50dp" app:objectName="@string/gtm_share_address" app:visibilityWhenLoading="0" style="@style/TextBold14spOrange100Caps"/>
        </LinearLayout>
        <View android:tag="binding_9" android:background="@color/blackGrape10" android:layout_width="match_parent" android:layout_height="1dp"/>
    </LinearLayout>
</LinearLayout>
