<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:theme="@style/Theme.Swiggy.Storefront.Light" android:layout_gravity="center" android:id="@+id/root_view" android:tag="layout/layout_delete_voice_recording_confirmation_0" android:background="@drawable/rounded_corners_20dp" android:padding="@dimen/dimen_16dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <in.swiggy.android.dls.textview.DlsTextView android:id="@+id/primaryText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_8dp" android:text="@string/string_delete_voice_inteructions_title" android:lineSpacingExtra="@dimen/font_5sp" app:dlsTextColor="6" app:dlsTextStyle="3" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <in.swiggy.android.dls.textview.DlsTextView android:id="@+id/secondaryText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10dp" android:text="@string/string_delete_confirmation_secondary" android:maxLines="2" android:lineSpacingExtra="@dimen/font_3sp" app:dlsTextColor="8" app:dlsTextStyle="9" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/primaryText"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/cl_bottons" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/secondaryText">
        <in.swiggy.android.dls.button.NormalButton android:id="@+id/positiveCta" android:tag="binding_1" android:paddingLeft="@dimen/dimen_35dp" android:paddingTop="@dimen/dimen_12dp" android:paddingRight="@dimen/dimen_35dp" android:paddingBottom="@dimen/dimen_12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_12dp" android:text="@string/delete_dialog_delete_text" app:layout_constraintLeft_toRightOf="@+id/negatvieCta" app:layout_constraintTop_toTopOf="0"/>
        <in.swiggy.android.dls.button.NormalButton android:id="@+id/negatvieCta" android:tag="binding_2" android:paddingLeft="@dimen/dimen_33dp" android:paddingTop="@dimen/dimen_12dp" android:paddingRight="@dimen/dimen_33dp" android:paddingBottom="@dimen/dimen_12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" app:layout_constraintRight_toLeftOf="@+id/positiveCta" app:layout_constraintTop_toTopOf="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
