<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:theme="@style/Theme.Swiggy.Storefront.Light" android:id="@+id/material_card" android:tag="layout/location_change_dialog_layout_0" android:layout_width="match_parent" android:layout_height="wrap_content" app:cardBackgroundColor="?attr/colorBackgroundPrimary" app:cardCornerRadius="@dimen/dimen_20dp" app:cardElevation="@dimen/dimen_24dp">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/dialog_container" android:paddingTop="@dimen/dimen_24dp" android:paddingBottom="@dimen/dimen_16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/margin_16dp" android:paddingEnd="@dimen/margin_16dp">
        <in.swiggy.android.dls.textview.DlsTextView android:id="@+id/title" android:layout_width="@dimen/dimen_0dp" android:layout_height="wrap_content" android:text="@string/popup_location_change_text" app:dlsTextColor="6" app:dlsTextStyle="2" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <in.swiggy.android.dls.textview.DlsTextView android:id="@+id/description" android:layout_width="@dimen/dimen_0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8dp" android:text="@string/popup_location_change_desc" android:fontFamily="@font/proxima_nova_medium" app:dlsTextColor="8" app:dlsTextStyle="8" app:layout_constraintEnd_toEndOf="@+id/title" app:layout_constraintStart_toStartOf="@+id/title" app:layout_constraintTop_toBottomOf="@+id/title"/>
        <in.swiggy.android.dls.button.NormalButton android:textColor="?attr/textColorButtonPrimary" android:id="@+id/id_clear_cart" android:layout_width="@dimen/dimen_0dp" android:layout_height="@dimen/dimen_44dp" android:layout_marginTop="@dimen/dimen_32dp" android:text="@string/popup_location_change_right_button" android:layout_marginStart="@dimen/dimen_6dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@+id/id_go_back" app:layout_constraintTop_toBottomOf="@+id/description"/>
        <in.swiggy.android.dls.button.NormalButton android:id="@+id/id_go_back" android:layout_width="@dimen/dimen_0dp" android:layout_height="@dimen/dimen_44dp" android:layout_marginTop="@dimen/dimen_32dp" android:text="@string/popup_location_change_left_button" android:layout_marginEnd="@dimen/dimen_6dp" app:layout_constraintEnd_toStartOf="@+id/id_clear_cart" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/description"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
